--- a/playbooks/firewall/policy_nat.yml
+++ b/playbooks/firewall/policy_nat.yml
@@ -24,7 +24,7 @@
         to_zones: ['L3-WAN']
         to_interface: '{{ wan_interface }}'
         service: 'any'
-        source_addresses: ['ZONE_L3-Management']
+        source_addresses: ['ZONE_{{ zone_mgt }}']
         destination_addresses: ['any']
         source_translation_type: 'dynamic-ip-and-port'
         source_translation_address_type: 'interface-address'
@@ -41,13 +41,13 @@
         nat_type: 'ipv4'
         from_zones: '{{ zone_virt }}'
         to_zones: ['L3-WAN']
-        to_interface: 'vlan.9000'
+        to_interface: '{{ wan_interface }}'
         service: 'any'
-        source_addresses: ['ZONE_L3-Virtualization']
+        source_addresses: ['ZONE_{{ zone_virt }}']
         destination_addresses: ['any']
         source_translation_type: 'dynamic-ip-and-port'
         source_translation_address_type: 'interface-address'
-        source_translation_interface: 'vlan.9000'
+        source_translation_interface: '{{ wan_interface }}'
         source_translation_ip_address: '96.231.240.210/24' 
 
     - name: TMP NAT Policy - Authentication
@@ -58,15 +58,15 @@
         tags: ['Authentication']
         group_tag: 'OUTBOUND'
         nat_type: 'ipv4'
-        from_zones: ['L3-Authentication']
+        from_zones: '{{ zone_auth }}'
         to_zones: ['L3-WAN']
-        to_interface: 'vlan.9000'
+        to_interface: '{{ wan_interface }}'
         service: 'any'
         source_addresses: ['ZONE_L3-Authentication']
         destination_addresses: ['any']
         source_translation_type: 'dynamic-ip-and-port'
         source_translation_address_type: 'interface-address'
-        source_translation_interface: 'vlan.9000'
+        source_translation_interface: '{{ wan_interface }}'
         source_translation_ip_address: '96.231.240.210/24' 
 
     - name: TMP NAT Policy - Security
@@ -79,13 +79,13 @@
         nat_type: 'ipv4'
         from_zones: ['L3-Security']
         to_zones: ['L3-WAN']
-        to_interface: 'vlan.9000'
+        to_interface: '{{ wan_interface }}'
         service: 'any'
         source_addresses: ['ZONE_L3-Security']
         destination_addresses: ['any']
         source_translation_type: 'dynamic-ip-and-port'
         source_translation_address_type: 'interface-address'
-        source_translation_interface: 'vlan.9000'
+        source_translation_interface: '{{ wan_interface }}'
         source_translation_ip_address: '96.231.240.210/24'
 
     - name: TMP NAT Policy - Servers
@@ -98,13 +98,13 @@
         nat_type: 'ipv4'
         from_zones: ['L3-Servers']
         to_zones: ['L3-WAN']
-        to_interface: 'vlan.9000'
+        to_interface: '{{ wan_interface }}'
         service: 'any'
         source_addresses: ['ZONE_L3-Servers']
         destination_addresses: ['any']
         source_translation_type: 'dynamic-ip-and-port'
         source_translation_address_type: 'interface-address'
-        source_translation_interface: 'vlan.9000'
+        source_translation_interface: '{{ wan_interface }}'
         source_translation_ip_address: '96.231.240.210/24'
 
     - name: TMP NAT Policy - Endpoints
@@ -117,12 +117,12 @@
         nat_type: 'ipv4'
         from_zones: ['L3-Endpoints']
         to_zones: ['L3-WAN']
-        to_interface: 'vlan.9000'
+        to_interface: '{{ wan_interface }}'
         service: 'any'
         source_addresses: ['ZONE_L3-Endpoints']
         destination_addresses: ['any']
         source_translation_type: 'dynamic-ip-and-port'
         source_translation_address_type: 'interface-address'
-        source_translation_interface: 'vlan.9000'
+        source_translation_interface: '{{ wan_interface }}'
         source_translation_ip_address: '96.231.240.210/24'
 
