--- a/playbooks/firewall/policy_security_01_unauthorized_traffic.yml
+++ b/playbooks/firewall/policy_security_01_unauthorized_traffic.yml
@@ -22,7 +22,7 @@
         source_zone: '{{ zones_all }}'
         source_ip: ['any']
         source_user: ['any']
-        destination_zone: ['WAN']
+        destination_zone: ['L3-WAN']
         destination_ip: ['RFC1918']
         application: ['any']
         service: ['any']
