changing dest to any

--- a/playbooks/firewall/policy_security_90_tmp_internet_access.yml
+++ b/playbooks/firewall/policy_security_90_tmp_internet_access.yml
@@ -24,7 +24,7 @@
         source_ip: ['SECNET HQ Network','ZONE_{{ zone_gst }}']
         source_user: ['any']
         destination_zone: ['L3-WAN']
-        destination_ip: ['US']
+        destination_ip: ['any']
         application: ['any']
         service: ['application-default']
         category: ['any']
