--- a/inventory/group_vars/firewall.example
+++ b/inventory/group_vars/firewall.example
@@ -5,6 +5,7 @@ api_key: 'place_your_api_key_here'
 
 firewall_hostname: hqcrfw1
 firewall_domain: secnetwork.org
+firewall_timezone: 'America/New_York'
 
 initial_dns_server_1: 1.1.1.1
 initial_dns_server_2: 1.1.1.2
