--- a/playbooks/firewall/policy_security_03_public_services.yml
+++ b/playbooks/firewall/policy_security_03_public_services.yml
@@ -43,7 +43,7 @@
         tag_name: ['INBOUND']
         group_tag: 'PUBLIC'
         source_zone: ['L2-WAN']
-        source_ip: ['US']
+        source_ip: ['any']
         source_user: ['any']
         destination_zone: ['L2-LAN']
         destination_ip: ['96.231.240.220','96.231.240.221']
@@ -56,6 +56,28 @@
         location: 'after'
         existing_rule: 'JY VAULT'
 
+    - name: HOME NETWORK
+      panos_security_rule:
+        provider: '{{ provider }}'
+        rule_name: 'HOME NETWORK'
+        rule_type: interzone
+        description: 'Managed by Ansible'
+        tag_name: ['INBOUND']
+        group_tag: 'PUBLIC'
+        source_zone: ['L2-WAN']
+        source_ip: ['US']
+        source_user: ['any']
+        destination_zone: ['L2-LAN']
+        destination_ip: ['96.231.240.212','96.231.240.213','96.231.240.215']
+        application: ['ssl','web-browsing','websocket','synology-cloudstation','synology-dsm','ms-rdp']
+        service: ['any']
+        category: ['any']
+        action: 'allow'
+        log_start: 'no'
+        log_end: 'yes'
+        location: 'after'
+        existing_rule: 'NS MOJAVE'
+
     - name: L2-WAN Internet
       panos_security_rule:
         provider: '{{ provider }}'
@@ -65,10 +87,10 @@
         tag_name: ['OUTBOUND']
         group_tag: 'PUBLIC'
         source_zone: ['L2-LAN']
-        source_ip: ['96.231.240.214','96.231.240.220','96.231.240.221']
+        source_ip: ['96.231.240.212','96.231.240.213','96.231.240.214','96.231.240.215','96.231.240.220','96.231.240.221']
         source_user: ['any']
         destination_zone: ['L2-WAN']
-        destination_ip: ['US']
+        destination_ip: ['any']
         application: ['any']
         service: ['any']
         category: ['any']
@@ -76,4 +98,4 @@
         log_start: 'no'
         log_end: 'yes'
         location: 'after'
-        existing_rule: 'NS MOJAVE'
+        existing_rule: 'HOME NETWORK'
