--- a/playbooks/firewall/policy_security_02_firewall_services.yml
+++ b/playbooks/firewall/policy_security_02_firewall_services.yml
@@ -32,6 +32,7 @@
         action: 'allow'
         log_start: 'no'
         log_end: 'yes'
+        group_profile: 'Default_WAN_Sec_Profile'
         #antivirus: 'Outbound AntiVirus Profile'
         #vulnerability: 'Outbound Protection Profile'
         #spyware: 'Outbound Anti-Spyware Profile'
@@ -59,6 +60,7 @@
         action: 'allow'
         log_start: 'no'
         log_end: 'yes'
+        group_profile: 'Default_WAN_Sec_Profile'
         #antivirus: 'Outbound AntiVirus Profile'
         #vulnerability: 'Outbound Protection Profile'
         #spyware: 'Outbound Anti-Spyware Profile'
@@ -85,6 +87,7 @@
         action: 'allow'
         log_start: 'no'
         log_end: 'yes'
+        group_profile: 'Default_WAN_Sec_Profile'
         location: 'after'
         existing_rule: 'PANOS FW - PANOS'
 
@@ -107,5 +110,6 @@
         action: 'allow'
         log_start: 'no'
         log_end: 'yes'
+        group_profile: 'Default_WAN_Sec_Profile'
         location: 'after'
         existing_rule: 'PANOS FW to DNS Servers'
