--- a/inventory/hosts.example
+++ b/inventory/hosts.example
@@ -1,3 +1,13 @@
 
 [netbox]
 localhost ansible_python_interpreter=/usr/bin/python3.8
+
+[firewall]
+10.0.11.251 ansible_python_interpreter=/usr/bin/python3.9
+
+[vmware]
+10.0.11.201
+10.0.11.202
+10.0.11.203
+10.0.11.204
+10.0.11.205
