testing vmware code

--- a/playbooks/vmware/initial_setup_mgmt.yml
+++ b/playbooks/vmware/initial_setup_mgmt.yml
@@ -28,7 +28,7 @@
         hostname: '{{ esxi_host_5 }}'
         username: '{{ esxi_username }}'
         password: '{{ esxi_password }}'
-        cluster_name: 'hqvh5'
+        cluster_name: [hqvh5.secnetwork.org]
         switch: "{{ esxi_vswitch }}"
         portgroup: "VM Network"
         state: absent
