--- a/playbooks/vmware/initial_setup_mgmt.yml
+++ b/playbooks/vmware/initial_setup_mgmt.yml
@@ -46,3 +46,15 @@
         portgroup: "Management"
         vlan_id: "11"
       delegate_to: localhost
+
+    - name: Add Management Network VM Portgroup
+      community.vmware.vmware_portgroup:
+        hostname: '{{ esxi_host_5 }}'
+        username: '{{ esxi_username }}'
+        password: '{{ esxi_password }}'
+        validate_certs: no
+        hosts: [hqvh5.secnetwork.org]
+        switch: "{{ esxi_vswitch }}"
+        portgroup: "Admins"
+        vlan_id: "15"
+      delegate_to: localhost
