--- a/playbooks/vmware/initial_setup_mgmt.yml
+++ b/playbooks/vmware/initial_setup_mgmt.yml
@@ -23,7 +23,7 @@
           - secnetwork.org
       delegate_to: localhost
 
-    - name: Remove Portgroup
+    - name: Remove VM Network Portgroup
       vmware_portgroup:
         hostname: '{{ esxi_host_5 }}'
         username: '{{ esxi_username }}'
@@ -35,7 +35,7 @@
         state: absent
       delegate_to: localhost
 
-    - name: Add Management Network VM Portgroup
+    - name: Add Management Portgroup
       community.vmware.vmware_portgroup:
         hostname: '{{ esxi_host_5 }}'
         username: '{{ esxi_username }}'
@@ -47,7 +47,7 @@
         vlan_id: "11"
       delegate_to: localhost
 
-    - name: Add Management Network VM Portgroup
+    - name: Add Admins Portgroup
       community.vmware.vmware_portgroup:
         hostname: '{{ esxi_host_5 }}'
         username: '{{ esxi_username }}'
@@ -59,7 +59,7 @@
         vlan_id: "15"
       delegate_to: localhost
 
-    - name: Add Management Network VM Portgroup
+    - name: Add vManagement Portgroup
       community.vmware.vmware_portgroup:
         hostname: '{{ esxi_host_5 }}'
         username: '{{ esxi_username }}'
@@ -71,7 +71,7 @@
         vlan_id: "21"
       delegate_to: localhost
 
-    - name: Add Management Network VM Portgroup
+    - name: Add PDC Portgroup
       community.vmware.vmware_portgroup:
         hostname: '{{ esxi_host_5 }}'
         username: '{{ esxi_username }}'
@@ -81,4 +81,136 @@
         switch: "{{ esxi_vswitch }}"
         portgroup: "PDC"
         vlan_id: "31"
+      delegate_to: localhost
+
+    - name: Add PKI Portgroup
+      community.vmware.vmware_portgroup:
+        hostname: '{{ esxi_host_5 }}'
+        username: '{{ esxi_username }}'
+        password: '{{ esxi_password }}'
+        validate_certs: no
+        hosts: [hqvh5.secnetwork.org]
+        switch: "{{ esxi_vswitch }}"
+        portgroup: "PKI"
+        vlan_id: "32"
+      delegate_to: localhost
+
+    - name: Add NAC Portgroup
+      community.vmware.vmware_portgroup:
+        hostname: '{{ esxi_host_5 }}'
+        username: '{{ esxi_username }}'
+        password: '{{ esxi_password }}'
+        validate_certs: no
+        hosts: [hqvh5.secnetwork.org]
+        switch: "{{ esxi_vswitch }}"
+        portgroup: "NAC"
+        vlan_id: "33"
+      delegate_to: localhost
+
+    - name: Add SSO Portgroup
+      community.vmware.vmware_portgroup:
+        hostname: '{{ esxi_host_5 }}'
+        username: '{{ esxi_username }}'
+        password: '{{ esxi_password }}'
+        validate_certs: no
+        hosts: [hqvh5.secnetwork.org]
+        switch: "{{ esxi_vswitch }}"
+        portgroup: "SSO"
+        vlan_id: "34"
+      delegate_to: localhost
+
+    - name: Add SSO Portgroup
+      community.vmware.vmware_portgroup:
+        hostname: '{{ esxi_host_5 }}'
+        username: '{{ esxi_username }}'
+        password: '{{ esxi_password }}'
+        validate_certs: no
+        hosts: [hqvh5.secnetwork.org]
+        switch: "{{ esxi_vswitch }}"
+        portgroup: "SSO"
+        vlan_id: "34"
+      delegate_to: localhost
+
+    - name: Add LOG Portgroup
+      community.vmware.vmware_portgroup:
+        hostname: '{{ esxi_host_5 }}'
+        username: '{{ esxi_username }}'
+        password: '{{ esxi_password }}'
+        validate_certs: no
+        hosts: [hqvh5.secnetwork.org]
+        switch: "{{ esxi_vswitch }}"
+        portgroup: "LOG"
+        vlan_id: "41"
+      delegate_to: localhost
+
+    - name: Add VAS Portgroup
+      community.vmware.vmware_portgroup:
+        hostname: '{{ esxi_host_5 }}'
+        username: '{{ esxi_username }}'
+        password: '{{ esxi_password }}'
+        validate_certs: no
+        hosts: [hqvh5.secnetwork.org]
+        switch: "{{ esxi_vswitch }}"
+        portgroup: "VAS"
+        vlan_id: "42"
+      delegate_to: localhost
+
+    - name: Add MON Portgroup
+      community.vmware.vmware_portgroup:
+        hostname: '{{ esxi_host_5 }}'
+        username: '{{ esxi_username }}'
+        password: '{{ esxi_password }}'
+        validate_certs: no
+        hosts: [hqvh5.secnetwork.org]
+        switch: "{{ esxi_vswitch }}"
+        portgroup: "MON"
+        vlan_id: "43"
+      delegate_to: localhost
+
+    - name: Add NVR Portgroup
+      community.vmware.vmware_portgroup:
+        hostname: '{{ esxi_host_5 }}'
+        username: '{{ esxi_username }}'
+        password: '{{ esxi_password }}'
+        validate_certs: no
+        hosts: [hqvh5.secnetwork.org]
+        switch: "{{ esxi_vswitch }}"
+        portgroup: "NVR"
+        vlan_id: "44"
+      delegate_to: localhost
+
+    - name: Add Servers Portgroup
+      community.vmware.vmware_portgroup:
+        hostname: '{{ esxi_host_5 }}'
+        username: '{{ esxi_username }}'
+        password: '{{ esxi_password }}'
+        validate_certs: no
+        hosts: [hqvh5.secnetwork.org]
+        switch: "{{ esxi_vswitch }}"
+        portgroup: "Servers"
+        vlan_id: "51"
+      delegate_to: localhost
+
+    - name: Add Frontend DMZ Portgroup
+      community.vmware.vmware_portgroup:
+        hostname: '{{ esxi_host_5 }}'
+        username: '{{ esxi_username }}'
+        password: '{{ esxi_password }}'
+        validate_certs: no
+        hosts: [hqvh5.secnetwork.org]
+        switch: "{{ esxi_vswitch }}"
+        portgroup: "Frontend-DMZ"
+        vlan_id: "91"
+      delegate_to: localhost
+
+    - name: Add Backend-DMZ Portgroup
+      community.vmware.vmware_portgroup:
+        hostname: '{{ esxi_host_5 }}'
+        username: '{{ esxi_username }}'
+        password: '{{ esxi_password }}'
+        validate_certs: no
+        hosts: [hqvh5.secnetwork.org]
+        switch: "{{ esxi_vswitch }}"
+        portgroup: "Backend-DMZ"
+        vlan_id: "95"
       delegate_to: localhost
