adding UPS FW and UNIFI

--- a/playbooks/windows/win-dns.yaml
+++ b/playbooks/windows/win-dns.yaml
@@ -8,6 +8,25 @@
 
   vars:
     create_dns_record:
+
+      - win_dns_record_name: "hqfw1.secnetwork.org."
+        win_dns_record_type: "A"
+        win_dns_record_value: "10.0.11.251"
+        win_dns_record_zone: "secnetwork.org"
+      - win_dns_record_name: "251.11"
+        win_dns_record_type: "PTR"
+        win_dns_record_value: "hqfw1.secnetwork.org."
+        win_dns_record_zone: "0.10.in-addr.arpa"
+
+      - win_dns_record_name: "hqunifi.secnetwork.org."
+        win_dns_record_type: "A"
+        win_dns_record_value: "10.0.11.241"
+        win_dns_record_zone: "secnetwork.org"
+      - win_dns_record_name: "241.11"
+        win_dns_record_type: "PTR"
+        win_dns_record_value: "hqunifi.secnetwork.org."
+        win_dns_record_zone: "0.10.in-addr.arpa"
+
       - win_dns_record_name: "hqvh1.secnetwork.org."
         win_dns_record_type: "A"
         win_dns_record_value: "10.0.21.101"
@@ -91,6 +110,69 @@
       - win_dns_record_name: "114.11"
         win_dns_record_type: "PTR"
         win_dns_record_value: "hqvh14-idrac.secnetwork.org."
+        win_dns_record_zone: "0.10.in-addr.arpa"
+
+      - win_dns_record_name: "hqvca.secnetwork.org."
+        win_dns_record_type: "A"
+        win_dns_record_value: "10.0.21.11"
+        win_dns_record_zone: "secnetwork.org"
+      - win_dns_record_name: "11.21"
+        win_dns_record_type: "PTR"
+        win_dns_record_value: "hqvca.secnetwork.org."
+        win_dns_record_zone: "0.10.in-addr.arpa"
+
+      - win_dns_record_name: "hqups1.secnetwork.org."
+        win_dns_record_type: "A"
+        win_dns_record_value: "10.0.11.91"
+        win_dns_record_zone: "secnetwork.org"
+      - win_dns_record_name: "91.11"
+        win_dns_record_type: "PTR"
+        win_dns_record_value: "hqups1.secnetwork.org."
+        win_dns_record_zone: "0.10.in-addr.arpa"
+
+      - win_dns_record_name: "hqups2.secnetwork.org."
+        win_dns_record_type: "A"
+        win_dns_record_value: "10.0.11.92"
+        win_dns_record_zone: "secnetwork.org"
+      - win_dns_record_name: "92.11"
+        win_dns_record_type: "PTR"
+        win_dns_record_value: "hqups2.secnetwork.org."
+        win_dns_record_zone: "0.10.in-addr.arpa"
+
+      - win_dns_record_name: "hqups3.secnetwork.org."
+        win_dns_record_type: "A"
+        win_dns_record_value: "10.0.11.93"
+        win_dns_record_zone: "secnetwork.org"
+      - win_dns_record_name: "93.11"
+        win_dns_record_type: "PTR"
+        win_dns_record_value: "hqups3.secnetwork.org."
+        win_dns_record_zone: "0.10.in-addr.arpa"
+
+      - win_dns_record_name: "hqups4.secnetwork.org."
+        win_dns_record_type: "A"
+        win_dns_record_value: "10.0.11.94"
+        win_dns_record_zone: "secnetwork.org"
+      - win_dns_record_name: "94.11"
+        win_dns_record_type: "PTR"
+        win_dns_record_value: "hqups4.secnetwork.org."
+        win_dns_record_zone: "0.10.in-addr.arpa"
+
+      - win_dns_record_name: "hqups5.secnetwork.org."
+        win_dns_record_type: "A"
+        win_dns_record_value: "10.0.11.95"
+        win_dns_record_zone: "secnetwork.org"
+      - win_dns_record_name: "95.11"
+        win_dns_record_type: "PTR"
+        win_dns_record_value: "hqups5.secnetwork.org."
+        win_dns_record_zone: "0.10.in-addr.arpa"
+
+      - win_dns_record_name: "hqups6.secnetwork.org."
+        win_dns_record_type: "A"
+        win_dns_record_value: "10.0.11.96"
+        win_dns_record_zone: "secnetwork.org"
+      - win_dns_record_name: "96.11"
+        win_dns_record_type: "PTR"
+        win_dns_record_value: "hqups6.secnetwork.org."
         win_dns_record_zone: "0.10.in-addr.arpa"
 
   tasks:
