--- a/playbooks/windows/create_ad_dns_initial.yml
+++ b/playbooks/windows/create_ad_dns_initial.yml
@@ -9,7 +9,7 @@
   vars:
     create_dns_record:
 
-      - win_dns_record_name: "hqfw1.secnetwork.org."
+      - win_dns_record_name: "hqcrfw1.secnetwork.org."
         win_dns_record_type: "A"
         win_dns_record_value: "10.0.11.251"
         win_dns_record_zone: "secnetwork.org"
