adding missing provider

--- a/playbooks/windows/policy_security_06_active_directory.yml
+++ b/playbooks/windows/policy_security_06_active_directory.yml
@@ -7,6 +7,9 @@
     - paloaltonetworks.panos
 
   vars:
+    provider:
+      ip_address: '{{ ip_address }}'
+      api_key: '{{ api_key }}'
 
     create_service_object:
       - create_service_object_name: 'service-ldap'
