--- a/playbooks/windows/policy_security_06_active_directory.yml
+++ b/playbooks/windows/policy_security_06_active_directory.yml
@@ -56,7 +56,7 @@
         log_start: 'no'
         log_end: 'yes'
         group_profile: 'Default_LAN_Sec_Profile'
-        location: 'above'
+        location: 'before'
         existing_rule: 'Deny All Traffic'
 
     - name: SECNET Active Directory - DNS
