--- a/playbooks/vmware/initial_setup_hqvca.yml
+++ b/playbooks/vmware/initial_setup_hqvca.yml
@@ -67,7 +67,7 @@
         username: '{{ vca_username }}'
         password: '{{ vca_password }}'
         esxi_hostname: '{{ esxi_host_1 }}'
-        license: '{{ 2023_lic_esxi_6 }}'
+        license: '{{ lic_esxi_6 }}'
         state: present
         validate_certs: false
       delegate_to: localhost
